fixed text nowrap and price size

--- a/css/styles.css
+++ b/css/styles.css
@@ -743,6 +743,7 @@ ul.bullets li::before {
 }
 
 .price {
+    font-size: 40px;
     font-weight: 700;
     color: var(---orange);
     margin-bottom: 0;
